--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -83,8 +83,8 @@ basket.removeAllVerbose = remove all publications from the clipboard
 batchedit.AllpostTagsHeader        = The following tag(s) will be added <br/> to all the selected posts
 batchedit.EditAllTag               = Add tags to all the selected posts
 batchedit.EditEachTag              = Edit each posts' tags separately
-batchedit.Selection.addToAll       = Add a tag(s) to all posts
-batchedit.Selection.addToEach      = Update tag (s) of each post
+batchedit.Selection.addToAll       = Add tag(s) to all posts
+batchedit.Selection.addToEach      = Update tag(s) of each post
 batchedit.addTags                  = add tags
 batchedit.allTagOk                 = Add tag(s)
 batchedit.alreadyInCollectionError = This post is already stored in your collection!
@@ -95,18 +95,18 @@ batchedit.checkboxNormalize        = Normalize BibTeX key
 # batchedit page(s)
 batchedit.deleteAlert              = Warning: You are about to delete the selected posts!
 batchedit.deleteSelected           = Delete post(s)
-batchedit.disregardedPosts         = Disregarded posts
+batchedit.disregardedPosts         = Ignored posts
 batchedit.disregardedPosts.alert   = The inactive posts are those that are not in your collection (thus you can not edit or delete them).
 batchedit.disregardedPosts.info    = This post is not your own and therefore you can not edit it.
 batchedit.eachTagOk                = Edit tag(s)
 batchedit.editHint                 = Info: To enable edit options, select an action and at least one post.
-batchedit.hint.notSavedEdit        = The following (non-erroneous) post(s) are not saved yet. They will be saved after you finish editing them.
+batchedit.hint.notSavedEdit        = The following (non-erroneous) post(s) are not saved yet. They will be saved after you finished editing them.
 batchedit.hint.savedEdit           = The following (non-erroneous) post(s) are saved. You can now edit them.
 batchedit.info1                    = Here you can edit your posts. Edit options include
-batchedit.info2                    = To start editing, select at least one post and then select desired editing option. 
+batchedit.info2                    = To start editing, select at least one post and then select an editing option. 
 batchedit.noPost.message           = There is no post to edit!
-batchedit.normalizeAlert           = Info: You are about to normalize BibTex key of the selected posts! The BibTex key of a post is normalized to the pattern <tt>nameYearTitle</tt>, where <tt>name</tt> is the last name of the first author, <tt>year</tt> is the publication year, and <tt>title</tt> is the first word of the title that has at least five letters, e.g. <tt>knuth1998programming</tt>.
-batchedit.normalizeSelected        = Normalize BibTex Key
+batchedit.normalizeAlert           = Info: You are about to normalize the BibTeX keys of the selected posts! The BibTeX key of a post is normalized to the pattern <tt>nameYearTitle</tt>, where <tt>name</tt> is the last name of the first author, <tt>year</tt> is the publication year, and <tt>title</tt> is the first word of the title that has at least five letters, e.g. <tt>knuth1998programming</tt>.
+batchedit.normalizeSelected        = Normalize BibTeX Key
 batchedit.notYours                 = The following posts do not belong to your collection. You can only edit your own posts.
 batchedit.option1                  = Normalizing BibTeX key
 batchedit.option2                  = Changing privacy 
@@ -423,7 +423,7 @@ devicesupport.header      = Device support
 didyouknow = Did you know...
 
 didyouknow.browserButtons  = Our browser add-ons helps you to collect bookmarks and publications. <a href="/buttons">Read more.</a>
-didyouknow.editYourProfile = It's much easier for your colleagues to find you, if you've filled out your research profile. <a href="/settings">Edit my profile.</a>
+didyouknow.editYourProfile = It is much easier for your colleagues to find you, if you have filled out your research profile. <a href="/settings">Edit my profile.</a>
 didyouknow.isbn            = In order to save a book, a journal, or a magazine in your publication list, you can <a href="/postPublication?selTab=3#selTab3">insert easily</a> a unique identifier like an ISBN, an ISSN, or a DOI. It searches for the other metadata self-acting and transmits these into your post input form. This saves time and nerves.
 didyouknow.scanningQr      = <p>Your webcam can scan the barcodes on your books!</p><p>The option 'scan code' on the 'post publication' page {0} opens a plugin that scans the code. You will get a prefilled publication form with all the available meta-data of the book.</p><p>{0} can also add a QR-Code to a white spot on the first page of your uploaded documents. If you print the document with this QR-code, you can scan the QR-code to later cite this paper.</p> 
 
@@ -857,20 +857,14 @@ help.link.tag.similarRelated = /help_en/Navigation%2Bvia%2Btags
 hide = hide
 
 # History page
-hidtory.info    = History page shows editing records of a post, including:
-hidtory.option1 = Editing date
-hidtory.option2 = Number of edited fields in each date 
-hidtory.option3 = Added characters to a field (green background)
-hidtory.option4 = Removed characters from a field (red background)
-
 history.currentVersion          = This version is identical to the latest(current) version.
 history.firstVersion            = This is the first version and has no previous version.  
 history.historyList.header      = The following revisions are available for this post:
 history.historySelect.compareTo = Compare to
 history.identicalToPreVersion   = This version is identical to the previous version.
 history.restore.confirm         = Do you really want to restore the selected fields?
-history.restoreBtn.disabled     = restore button is only enabled when you are comparing a revision to the current post.  
-history.restoreBtn.enabled      = restore to this version
+history.restoreBtn.disabled     = The restore button is only enabled when you are comparing a revision to the current post.  
+history.restoreBtn.enabled      = restore this version
 history.selection.current       = current version ({0} different fields)
 history.selection.help          = Select a revision and see the differences to this revision. (If you select 'current version', you will have an option to restore the current post to this version.)
 history.selection.previous      = previous version ({0} different fields)
@@ -1576,7 +1570,7 @@ post.resource.series.help                               = name of a series or a 
 post.resource.spaceseparated                            = space separated
 post.resource.suggested                                 = auto-complete:
 post.resource.suggestion.help                           = other users chose:
-post.resource.suggestion.hint                           = There are suggestions for this input
+post.resource.suggestion.hint                           = suggestions are available
 post.resource.tags                                      = tags
 post.resource.tags.cap                                  = Tags
 post.resource.tags.comma                                = Please confirm the usage of comma/semicolon in your tags. 
@@ -1906,7 +1900,7 @@ settings.group.reqGroup.automatic.button                    = create group
 settings.group.reqGroup.automatic.description               = Here you can create a new group. Please enter the desired name of the group and a short description. Your group will be created immediately.
 settings.group.reqGroup.automatic.reason                    = short description of the group
 settings.group.reqGroup.button                              = request group
-settings.group.reqGroup.description                         = Here you can request a new group. Please enter the desired name of the group and justify your request. We will inform you as soon as a system administrator approved your group.
+settings.group.reqGroup.description                         = Here you can request a new group. Please enter a name for the group and state the main purpose of that group. We will inform you as soon as a system administrator approved your group.
 settings.group.reqGroup.reason                              = reason for request
 settings.group.requestGroup.description                     = A new group can be created on the page <a href="{0}">{1}</a>.
 settings.group.requestGroup.link                            = request new group
@@ -2117,7 +2111,7 @@ system.bib3.switch                       = Switch to {0}
 system.bib3.switch.now                   = Switch to {0} now!
 system.contact                           = Contact:
 system.desc                              = The blue social bookmark and publication sharing system.
-system.groups                            = You can <a href="{0}">request a new group</a>.\r\nA group allows you to get an aggregated view of its member's posts as well as to make some of your own make visible only to its members. More information on groups can be found in our blog posts <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a> and <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
+system.groups                            = You can <a href="{0}">request a new group</a>.\r\nA group allows you to get an aggregated view of its members' posts as well as to make some of your own posts visible only to members. More information on groups can be found in our blog posts <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a> and <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
 system.introduction                      = This page shows you the latest updates of {0}.
 system.loginRegister                     = sign in/register
 system.offeredBy                         = {0} is offered by the <a href="http://www.kde.cs.uni-kassel.de/contact.html">KDE group</a> of the University of Kassel, the <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR group</a> of the University of W\u00FCrzburg, and the <a href="http://www.l3s.de/">L3S Research Center</a>, Germany.
