--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -82,7 +82,7 @@ basket.removeAllVerbose = Alle Publikationen aus der Ablage entfernen
 
 batchedit = 
 
-batchedit.AllpostTagsHeader        = Diese Tags werden zu 
+batchedit.AllpostTagsHeader        = Diese Tags werden zu allen selektierten<br/> Post hinzugef\u00FCgt
 batchedit.EditAllTag               = Tags zu allen ausgew\u00E4hlten Posts hinzuf\u00FCgen
 batchedit.EditEachTag              = Die Tags aller ausgew\u00E4hlten Eintr\u00E4ge separat bearbeiten
 batchedit.Selection.addToAll       = Tag(s) zu allen Eintr\u00E4gen hinzuf\u00FCgen
@@ -100,13 +100,13 @@ batchedit.disregardedPosts         = Ignorierte Eintr\u00E4ge
 batchedit.disregardedPosts.alert   = Die inaktiven Eintr\u00E4ge sind nicht aus Ihrer Sammlung und k\u00F6nnen daher nicht von Ihnen bearbeitet oder gel\u00F6scht werden.
 batchedit.disregardedPosts.info    = Da die folgenden Eintr\u00E4ge nicht Ihnen geh\u00F6ren, k\u00F6nnen Sie diese nicht bearbeiten.
 batchedit.eachTagOk                = Tag(s) bearbeiten
-batchedit.editHint                 = Bitte w\u00E4hlen Sie mindestens einen Eintrag aus, bevor Sie eine Option zur bearbeitung angeben.
+batchedit.editHint                 = Bitte w\u00E4hlen Sie mindestens einen Eintrag aus, bevor Sie eine Option zur Bearbeitung angeben.
 batchedit.hint.notSavedEdit        = Die folgenden (fehlerfreien) Eintr\u00E4ge werden erst gespeichert, wenn Sie die Bearbeitung abgeschlossen haben.
 batchedit.hint.savedEdit           = Die folgenden (fehlerfreien) Eintr\u00E4ge sind gespeichert und k\u00F6nnen nun bearbeitet werden.
 batchedit.info1                    = Bearbeiten Sie Ihre Eintr\u00E4ge. Sie k\u00F6nnen:
 batchedit.info2                    = Um Eintr\u00E4ge zu bearbeiten, w\u00E4hlen Sie diese zun\u00E4chst aus und geben dann die gew\u00FCnschte Aktion an.
 batchedit.noPost.message           = Es gibt keine Eintr\u00E4ge die bearbeitet werden k\u00F6nnten.
-batchedit.normalizeAlert           = \ Info: Sie normalisieren die BibTeX Schl\u00FCssel aller gew\u00E4hlten Eintr\u00E4ge! BibTex Schl\u00FCssel werden nach dem Schema <tt>NameJahrTitel</tt> normalisiert, wobei <tt>Name</tt> der Nachname des prim\u00E4ren Authors , <tt>Jahr</tt> das Jahr der Ver\u00F6ffentlichung und <tt>Titel</tt> das erste Wort des Titels der Publikation ist, das mehr als f\u00FCnf Buchstaben enth\u00E4lt. Beispiel: <tt>knuth1998programming</tt>.
+batchedit.normalizeAlert           = Info: Sie normalisieren die BibTeX Schl\u00FCssel aller gew\u00E4hlten Eintr\u00E4ge! BibTex Schl\u00FCssel werden nach dem Schema <tt>NameJahrTitel</tt> normalisiert, wobei <tt>Name</tt> der Nachname des prim\u00E4ren Authors , <tt>Jahr</tt> das Jahr der Ver\u00F6ffentlichung und <tt>Titel</tt> das erste Wort des Titels der Publikation ist, das mehr als f\u00FCnf Buchstaben enth\u00E4lt. Beispiel: <tt>knuth1998programming</tt>.
 batchedit.normalizeSelected        = BibTeX-Schl\u00FCssel normalisieren
 batchedit.notYours                 = Die folgenden Eintr\u00E4ge entstammen nicht Ihrer Sammlung. Nur eigene Eintr\u00E4ge k\u00F6nnen bearbeitet werden.
 batchedit.option1                  = BibTeX-Schl\u00FCssel normalisieren
@@ -196,7 +196,7 @@ bibtex.links                                 = Links
 bibtex.more                                  = Mehr
 bibtex.more_dots                             = mehr...
 bibtex.pages                                 = Seite
-bibtex.publicationHistory.title              = Publikations Verlauf
+bibtex.publicationHistory.title              = Publikationsverlauf
 bibtex.resources                             = Ressourcen (URL, PDF, ...)
 bibtex.upload.failed                         = Upload fehlgeschlagen
 bibtex.upload.file.back                      = Zur\u00FCck
@@ -257,7 +257,7 @@ build.version = {0} ${project.version}
 busytags = Beliebte Tags
 
 buttons.bookmarklet                  = <span class="addonhint">Browser Addons & </span>Bookmarklets
-buttons.bookmarklet.intro            = 
+buttons.bookmarklet.intro            = Sie k\u00F6nnen diese Buttons in Ihre Browserleiste ziehen:
 buttons.bookmarklet1                 = Bookmarklet-Buttons f\u00FCr Ihre Lesezeichen-Leiste
 buttons.javascript                   = F\u00FCr diese Funktion m\u00FCssen Sie JavaScript in Ihrem Browser aktivieren.
 buttons.javascript_appear            = wird angezeigt als
@@ -818,12 +818,12 @@ group.cv.publications                                    = Die neuesten Publikat
 group.cv.title                                           = Lebenslauf der Gruppe {0}
 group.doesnotexist                                       = 
 group.doesnotexist.header                                = Gruppe existiert nicht
-group.groupRequest.description                           = Sie k\u00F6nnen hier eine neue Gruppe beantragen. Bitte geben Sie dazu den gew\u00FCnschten Namen der Gruppe ein und begr\u00FCnden Ihren Antrag. Sie werden informiert, sobald die Gruppe durch einen Systembetreuer genehmigt wurde.
+group.groupRequest.description                           = Sie k\u00F6nnen hier eine neue Gruppe beantragen. Bitte geben Sie dazu den gew\u00FCnschten Namen der Gruppe ein und begr\u00FCnden Sie Ihren Antrag. Sie werden informiert, sobald die Gruppe durch einen Systembetreuer genehmigt wurde.
 group.groupRequest.reason                                = Begr\u00FCndung
 group.groupRequest.userName                              = Benutzername
 group.leave                                              = Gruppe verlassen
 group.memberOf                                           = Mitglied
-group.name                                               = Gruppen Kurzname
+group.name                                               = Kurzname
 group.publicationReportingSettings.externalReportingUrl  = Adresse des externen Meldungsservices
 group.publicationReportingSettings.reportingMailAddress  = E-Mail Adresse
 group.publicationReportingSettings.reportingMailTemplate = E-Mail Vorlage
@@ -832,7 +832,7 @@ group.reporting.headline                                 = Publikation Gruppe me
 group.reporting.mail.subject                             = Neue Publikation gemeldet
 group.updatePermission.update                            = Berechtigungen setzen
 
-grouprequest.mail.body    = 
+grouprequest.mail.body    = <a href="{2}">{1}</a> hat eine neue Gruppe beantragt.<br /><br />Name: {0}<br />Beschreibung: {3}<br />Grund: {4}<br /><br /><a href="{5}">Admin-Gruppenseite</a>
 grouprequest.mail.subject = Neue Anfrage f\u00FCr eine Gruppe ({0})
 
 groups = Gruppen
@@ -1904,9 +1904,9 @@ settings.group.pendingInvites.headline                      = Sie wurden in folg
 settings.group.pendingRequests                              = Offene Anfragen
 settings.group.permission.communityPostInspectionPermission = Mitglieder der Gruppe k\u00F6nnen Community Eintr\u00E4ge als gesichtet markieren.
 settings.group.permission.fetch                             = Berechtigungen laden
-settings.group.permission.help                              = Klicken Sie hier um die derzeitigen Gruppen-Level Berechtigungen anzuzeigen.
-settings.group.permissionHeading                            = Gruppen-Level Berechtigungen bearbeiten
-settings.group.permissionIntro                              = W\u00E4hlen Sie eine Gruppe aus, laden Sie die aktuellen Gruppen-Level Berechtigungen und l\u00F6schen Sie diese oder f\u00FCgen Sie weitere hinzu.
+settings.group.permission.help                              = Klicken Sie hier um die derzeitigen gruppenbasierten Berechtigungen anzuzeigen.
+settings.group.permissionHeading                            = Gruppenbasierte Berechtigungen bearbeiten
+settings.group.permissionIntro                              = W\u00E4hlen Sie eine Gruppe aus, laden Sie die aktuellen gruppenbasierten Berechtigungen und l\u00F6schen Sie diese oder f\u00FCgen Sie weitere hinzu.
 settings.group.profileInfo                                  = Die Informationen, die Sie hier eingeben, werden auf dem <a href="{0}">Lebenslauf</a> der Gruppe angezeigt.
 settings.group.realname                                     = Name der Gruppe
 settings.group.remInvite.button                             = entfernen
@@ -1920,7 +1920,7 @@ settings.group.reporting.update                             = Meldungseinstellun
 settings.group.reqGroup                                     = Eine neue Gruppe beantragen
 settings.group.reqGroup.automatic                           = Eine neue Gruppe erstellen
 settings.group.reqGroup.automatic.button                    = Gruppe erstellen
-settings.group.reqGroup.automatic.description               = Sie k\u00F6nnen hier eine neue Gruppe erstellen. Bitte geben Sie dazu den gew\u00FCnschten Namen der Gruppe ein und eine kurze Beschreibung der Gruppe. Ihre Gruppe wird automatisch erstellt.
+settings.group.reqGroup.automatic.description               = Sie k\u00F6nnen hier eine neue Gruppe erstellen. Bitte geben Sie dazu den gew\u00FCnschten Namen und eine kurze Beschreibung der Gruppe ein.
 settings.group.reqGroup.automatic.reason                    = Kurzbeschreibung
 settings.group.reqGroup.button                              = Gruppe beantragen
 settings.group.reqGroup.description                         = Sie k\u00F6nnen hier eine neue Gruppe beantragen. Bitte geben Sie dazu den gew\u00FCnschten Namen der Gruppe ein und begr\u00FCnden Ihren Antrag. Sie werden informiert, sobald die Gruppe durch einen Systembetreuer genehmigt wurde.
@@ -1932,7 +1932,7 @@ settings.group.revUser.button.title                         = Mitgliedschaftsant
 settings.group.settings                                     = Gruppeneinstellungen
 settings.group.sharedDocuments                              = Dokumentenfreigabe
 settings.group.sharedDocuments.help                         = Bei aktivierter Freigabe haben die Gruppenmitglieder Zugriff auf die Dokumente anderer Gruppenmitglieder.
-settings.group.update.success                               = Die Gruppen-Level Berechtigungen wurden ge\u00E4ndert.
+settings.group.update.success                               = Die gruppenbasierten Berechtigungen wurden ge\u00E4ndert.
 settings.groups                                             = Gruppen
 settings.import.button                                      = Importieren
 settings.jabRef.begin                                       = begin.layout (optional)
@@ -2133,7 +2133,7 @@ system.bib3.switch                       = Wechseln Sie zu {0}
 system.bib3.switch.now                   = Wechseln Sie jetzt zu {0}!
 system.contact                           = Kontakt:
 system.desc                              = Lesezeichen und Publikationen teilen - in blau!
-system.groups                            = Sie k\u00F6nnen neue Gruppen in Ihren Accounteinstellungen im Reiter Gruppe erstellen.\r\nEine Gruppe erm\u00F6glicht eine zusammengefasste Sicht auf die Eintr\u00E4ge aller Gruppenmitglieder sowie die Einschr\u00E4nkung der Sichtbarkeit von Eintr\u00E4gen auf Mitglieder der Gruppe. Mehr Informationen zu Gruppen finden Sie (auf Englisch) in unserem Blog unter <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a>  und <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
+system.groups                            = Sie k\u00F6nnen neue Gruppen in den Einstellungen Ihres Benutzerkontos unter dem Reiter Gruppe erstellen.\r\nEine Gruppe erm\u00F6glicht eine zusammengefasste Sicht auf die Eintr\u00E4ge aller Gruppenmitglieder sowie die Einschr\u00E4nkung der Sichtbarkeit von Eintr\u00E4gen auf Mitglieder der Gruppe. Mehr Informationen zu Gruppen finden Sie (auf Englisch) in unserem Blog unter <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a>  und <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
 system.introduction                      = Hier sind die letzten Beitr\u00E4ge zu {0} aufgelistet. 
 system.loginRegister                     = Anmelden/Registrieren
 system.offeredBy                         = {0} wird vom <a href="http://www.kde.cs.uni-kassel.de/kontakt.html">FG Wissensverarbeitung</a> der Universit\u00E4t Kassel, der <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR Gruppe</a> der Universit\u00E4t W\u00FCrzburg und vom <a href="http://www.l3s.de/">Forschungszentrum L3S</a> betrieben.
