started refactoring sidebar copied code

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2147,9 +2147,11 @@ tagbox.minfreq = minfreq
 # tag relations
 tagrelations = concepts
 
+tagrelations.all                              = all concepts
 tagrelations.all.text.partOne                 = Here you can see the most popular concepts in {0}.
 tagrelations.all.text.partTwo                 = You can access your own concepts via {0} and edit them on the {1} page. 
 tagrelations.all.title                        = get an overview of all concepts
+tagrelations.group                            = concepts of this group
 tagrelations.group.title                      = get an overview of the concepts of this group
 tagrelations.hide                             = &darr;
 tagrelations.hide.title                       = hide concept
@@ -2162,6 +2164,7 @@ tagrelations.showAll.title                    = show all concepts
 tagrelations.showPostsForConcept.title        = show all posts that are tagged with {0} or one of its subtags
 tagrelations.showPostsForConcept.title.subtag = show all posts that are tagged with {0}
 tagrelations.title                            = visit your myConcepts page
+tagrelations.user                             = concepts of this user
 tagrelations.user.title                       = get an overview of the concepts of this user
 
 tags = tags
