--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2169,9 +2169,11 @@ tagbox.minfreq = Minfreq
 # tag relations
 tagrelations = Konzepte
 
+tagrelations.all                              = alle Konzepte
 tagrelations.all.text.partOne                 = Hier sehen Sie die popul\u00E4rsten Konzepte in {0}.
 tagrelations.all.text.partTwo                 = Ihre eigenen Konzepte finden Sie auf der Seite {0}, bearbeiten k\u00F6nnen Sie diese auf der Seite {1}.
 tagrelations.all.title                        = Alle Konzepte anzeigen
+tagrelations.group                            = Konzepte dieser Gruppe
 tagrelations.group.title                      = Alle Konzepte dieser Gruppe anzeigen
 tagrelations.hide                             = &darr;
 tagrelations.hide.title                       = Konzept verbergen
@@ -2184,6 +2186,7 @@ tagrelations.showAll.title                    = Alle Konzepte anzeigen
 tagrelations.showPostsForConcept.title        = Zeige alle Eintr\u00E4ge mit dem Tag {0} oder einem Subtag davon
 tagrelations.showPostsForConcept.title.subtag = Zeige alle Eintr\u00E4ge mit dem Tag {0}
 tagrelations.title                            = besuchen Sie Ihre meineKonzepte Seite
+tagrelations.user                             = Konzepte dieses Benutzers
 tagrelations.user.title                       = Alle Konzepte dieses Benutzers anzeigen
 
 tags = Tags
