->elasticsearch is accessed via ?scope=FEDERATED urls ->renamed cross system search constant to FEDERATED

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1166,7 +1166,7 @@ navi.search.hint                 = fulltext search
 navi.search.in_group             = in group
 navi.settings                    = settings
 navi.settings.inactive           = Sign in for updating your user settings.
-navi.sharedResourceSearch        = Shared Resource Search
+navi.federated                   = federated search
 navi.sidebar.toggle              = Collapse/Open Sidebar
 navi.spam                        = spam
 navi.spammertags                 = spammertags
