--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1155,7 +1155,7 @@ navi.search.hint                 = Volltext-Suche
 navi.search.in_group             = in Gruppe
 navi.settings                    = Einstellungen
 navi.settings.inactive           = Melden Sie sich an, um Ihre pers\u00F6nlichen Einstellungen zu bearbeiten.
-navi.sharedResourceSearch        = System\u00FCbergreifende Suche
+navi.federated                   = System\u00FCbergreifende Suche
 navi.sidebar.toggle              = Schlie\u00DFe/\u00D6ffne Seitennavigation
 navi.spam                        = Spam
 navi.spammertags                 = Spammertags
