--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2207,6 +2207,7 @@ user = user
 
 user.birthday                         = birthday
 user.cvWiki                           = CV
+user.details                          = user details
 user.email                            = email
 user.email.help                       = mandatory; not included in your public profile
 user.gender                           = gender
