--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2229,6 +2229,7 @@ user = Benutzer
 
 user.birthday                         = Geburtstag
 user.cvWiki                           = Lebenslauf
+user.details                          = Benutzerdetails
 user.email                            = E-Mail
 user.email.help                       = Pflichtfeld; wird nicht in Ihrem \u00F6ffentlichen Profil angezeigt
 user.gender                           = Anrede
