--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -80,6 +80,8 @@ basket.infoActions      = For example, you can
 basket.removeAll        = clear clipboard
 basket.removeAllVerbose = remove all publications from the clipboard
 
+batchedit = 
+
 batchedit.AllpostTagsHeader        = The following tag(s) will be added <br/> to all the selected posts
 batchedit.EditAllTag               = Add tags to all the selected posts
 batchedit.EditEachTag              = Edit each posts' tags separately
@@ -1073,8 +1075,6 @@ navi.cv                          = curriculum vitae
 navi.cv.abbrev                   = CV
 navi.cv.my                       = my curriculum vitae
 navi.cvedit                      = curriculum vitae
-navi.diffBookmark                = diff bookmark
-navi.diffPublication             = diff Publication
 navi.discussedPosts              = discussed posts
 navi.discussions                 = discussions
 navi.documents                   = documents
@@ -1089,6 +1089,7 @@ navi.editTags                    = edit tags
 navi.editTags.inactive           = Sign in to edit your tags.
 navi.editTagsAndConcepts         = edit your tags and concepts
 navi.export                      = export
+navi.federated                   = federated search
 navi.followees                   = followed users
 navi.followers                   = followers
 navi.friend                      = friend
@@ -1166,7 +1167,6 @@ navi.search.hint                 = fulltext search
 navi.search.in_group             = in group
 navi.settings                    = settings
 navi.settings.inactive           = Sign in for updating your user settings.
-navi.federated                   = federated search
 navi.sidebar.toggle              = Collapse/Open Sidebar
 navi.spam                        = spam
 navi.spammertags                 = spammertags
@@ -1389,8 +1389,6 @@ post.resource.day                                       = day
 post.resource.day.help                                  = the day of publication
 post.resource.description                               = description
 post.resource.description.cap                           = Description
-post.resource.diffBookmark                              = Diff of your bookmark post
-post.resource.diffPublication                           = Diff of your publication post
 post.resource.discussion                                = discuss
 post.resource.discussion.actions.collapseAllThreads     = collapse all threads
 post.resource.discussion.actions.hide                   = hide discussion
@@ -1433,6 +1431,7 @@ post.resource.editor                                    = editor(s)
 post.resource.editor.help                               = Each editor on a separate line, format "Firstname Lastname". Only necessary, if no author is given.
 post.resource.entrytype                                 = entry type
 post.resource.entrytype.article.description             = An article from a scientific journal
+post.resource.entrytype.book                            = 
 post.resource.entrytype.book.description                = A book where a publisher is given
 post.resource.entrytype.booklet.description             = A printed and bound work where no publisher or financing institution is given
 post.resource.entrytype.conference                      = conference*
@@ -1862,11 +1861,13 @@ settings.group.denyReason.help                              = the reason why the
 settings.group.description                                  = description
 settings.group.editSettings                                 = edit settings
 settings.group.error.addUserToGroupFailed                   = The user {0} could not be added to the group {1}.
+settings.group.error.changeGroupRoleFailed                  = The group role of user {0} could not be edited.
 settings.group.error.groupDoesNotExist                      = The group, of which you wanted to change the settings, does not exist.
 settings.group.error.mandatoryFieldsNotSet                  = At least one of the required attributes of the group, that was to update, was not set: groupId, name, privacyLevel, sharedDocuments
 settings.group.error.userDoesNotExist                       = The invited user does not exist.
 settings.group.header                                       = group settings
 settings.group.homepage                                     = homepage
+settings.group.inviteUser                                   = Invite a user to a group
 settings.group.inviteUser.button                            = invite
 settings.group.inviteUser.help                              = the name of the user you want to invite
 settings.group.joinRequest                                  = join requests
@@ -1905,6 +1906,8 @@ settings.group.reqGroup.description                         = Here you can reque
 settings.group.reqGroup.reason                              = reason for request
 settings.group.requestGroup.description                     = A new group can be created on the page <a href="{0}">{1}</a>.
 settings.group.requestGroup.link                            = request new group
+settings.group.revUser.button                               = reject
+settings.group.revUser.button.title                         = Reject join request
 settings.group.settings                                     = group settings
 settings.group.sharedDocuments                              = shared documents
 settings.group.sharedDocuments.help                         = If activated, group members have access to the documents of other group members.
@@ -2104,7 +2107,6 @@ synchronization.synchronize                          = synchronize now
 
 system.about                             = {0} is a system for sharing bookmarks and lists of literature. \n\nWhy don't you try it yourself? <a href="/help_en/Collect%20publications%20and%20bookmarks">Collect</a>, <a href="/help_en/Manage%20your%20personal%20collection">organise</a>, and <a href="/help_en/Category%20Social%20Interaction">share</a> bookmarks and publications.
 system.about.bs                          = <h2>The easy way to manage scientific publications and bookmarks</h2>\n\n<p class="lead">{0} helps you to manage your publications and bookmarks, to collaborate with your colleagues and to find new interesting material for your research.</p>
-system.about.bs.headline                 = The easy way to manage scientific publications and bookmarks
 system.about.bs.learnmore                = learn more
 system.about.bs.register                 = register for free
 system.bib3.about                        = We have created a completely new user interface that\u2019s as powerful as it is intuitive to use. The new {0} front-end gives you a better accessibility, usability, and makes the system even more useful for mobile work.
