fixing history messages

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -864,6 +864,11 @@ history.firstVersion            = This is the first version and has no previous 
 history.historyList.header      = The following revisions are available for this post:
 history.historySelect.compareTo = Compare to
 history.identicalToPreVersion   = This version is identical to the previous version.
+history.info                    = The history page shows the different versions and edits of a post, including:
+history.option1                 = the editing date
+history.option2                 = number of modified fields in version
+history.option3                 = characters added to a field (green background)
+history.option4                 = characters removed from a field (red background).
 history.restore.confirm         = Do you really want to restore the selected fields?
 history.restoreBtn.disabled     = The restore button is only enabled when you are comparing a revision to the current post.  
 history.restoreBtn.enabled      = restore this version
