--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -868,6 +868,11 @@ history.firstVersion            = Dies ist die erste Version dieses Eintrages.
 history.historyList.header      = Versionsgeschichte:
 history.historySelect.compareTo = Vergleiche
 history.identicalToPreVersion   = Diese Version ist identisch zur vorherigen Version.
+history.info                    = Die Verlaufsseite zeigt die verschiedenen Versionen und Bearbeitungen eines Eintrages, u.a.:
+history.option1                 = das Bearbeitungsdatum
+history.option2                 = die Anzahl der ge\u00E4nderten Felder in jeder Version
+history.option3                 = hinzugef\u00FCgte Textteile (gr\u00FCner Hintergrund)
+history.option4                 = gel\u00F6schte Textteile (roter Hintergrund).
 history.restore.confirm         = Wollen Sie die ausgew\u00E4hlten Felder wiederherstellen?
 history.restoreBtn.disabled     = Der 
 history.restoreBtn.enabled      = diese Version wiederherstellen
