added missing messages

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1853,6 +1853,7 @@ settings.group.error.addUserToGroupFailed                   = Der Benutzer {0} k
 settings.group.error.alreadyInvited                         = Dieser Benutzer wurde bereits in die Gruppe eingeladen.
 settings.group.error.changeGroupRoleFailed                  = Die Gruppenrolle des Benutzers {0} konnte nicht bearbeitet werden.
 settings.group.error.groupDoesNotExist                      = Die Gruppe, deren Einstellungen Sie ver\u00E4ndern wollten, existiert nicht.
+settings.group.error.groupNotEmpty                          = Die Gruppe darf keine weiteren Mitglieder mehr enthalten, um sie l\u00F6schen zu k\u00F6nnen.
 settings.group.error.mandatoryFieldsNotSet                  = Mindestens eine der Eigenschaften der Gruppe, die Sie updaten wollten, war nicht gesetzt: groupId, name, privacyLevel, sharedDocuments
 settings.group.error.userDoesNotExist                       = Der Benutzer den Sie einladen wollten existiert nicht.
 settings.group.header                                       = Gruppeneinstellungen
