--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1864,6 +1864,7 @@ settings.group.disband.yesToDeleteGroup                     = (type {0} to delet
 settings.group.editSettings                                 = edit settings
 settings.group.error.addUserToGroupFailed                   = The user {0} could not be added to the group {1}.
 settings.group.error.groupDoesNotExist                      = The group, of which you wanted to change the settings, does not exist.
+settings.group.error.groupNotEmpty                          = There must not be other group members left, if you want to delete the group.
 settings.group.error.mandatoryFieldsNotSet                  = At least one of the required attributes of the group, that was to update, was not set: groupId, name, privacyLevel, sharedDocuments
 settings.group.header                                       = group settings
 settings.group.homepage                                     = homepage
