--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1845,6 +1845,8 @@ settings.group.accUser.button                               = accept
 settings.group.accUser.button.title                         = accept join request of user
 settings.group.addUser.button                               = add user
 settings.group.addUser.help                                 = the user's name that is to be added
+settings.group.allowJoin                                    = User join request
+settings.group.allowJoin.help                               = If enabled, other users have the possibility to send join requests.
 settings.group.delUser                                      = remove user
 settings.group.delUser.button                               = remove
 settings.group.delUser.button.title                         = remove this user from the group
