--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1831,6 +1831,8 @@ settings.group.accUser.button.title                         = Mitgliedschaftsant
 settings.group.addUser                                      = Einen Benutzer zu meiner Gruppe hinzuf\u00FCgen
 settings.group.addUser.button                               = Benutzer hinzuf\u00FCgen
 settings.group.addUser.help                                 = Der Name des Benutzers, der zur Gruppe hinzugef\u00FCgt werden soll
+settings.group.allowJoin                                    = Gruppenbeitrittsgesuche
+settings.group.allowJoin.help                               = Falls aktiviert haben andere Benutzer die M\u00F6glichkeit Ihnen Gruppenbeitrittsgesuche zu senden.\r\n\r\n
 settings.group.decUser.button                               = ablehnen
 settings.group.decUser.button.title                         = Mitgliedschaftsantrag des Benutzers ablehnen
 settings.group.decUser.noUser                               = Keine offenen Anfragen
