--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -217,7 +217,7 @@ bibtexhashexample.result      = resulting hashes
 blog = Blog
 
 bookmark.actions.copy.inactive       = Sign in to copy this bookmark into your collection.
-bookmark.actions.copy.title          = copy this bookmark to your repository
+bookmark.actions.copy.title          = copy this bookmark to your collection
 bookmark.actions.delete.inactive     = You can only delete bookmarks from your own collection.
 bookmark.actions.delete.title        = delete this bookmark from your repository
 # bookmark
@@ -1089,6 +1089,7 @@ navi.editTags                    = edit tags
 navi.editTags.inactive           = Sign in to edit your tags.
 navi.editTagsAndConcepts         = edit your tags and concepts
 navi.export                      = export
+navi.federated                   = federated search
 navi.followees                   = followed users
 navi.followers                   = followers
 navi.friend                      = friend
@@ -1166,7 +1167,6 @@ navi.search.hint                 = fulltext search
 navi.search.in_group             = in group
 navi.settings                    = settings
 navi.settings.inactive           = Sign in for updating your user settings.
-navi.federated                   = federated search
 navi.sidebar.toggle              = Collapse/Open Sidebar
 navi.spam                        = spam
 navi.spammertags                 = spammertags
