->fixed wrong non-null return value for invalid groups (fixes CVs)

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1869,6 +1869,7 @@ settings.group.error.addUserToGroupFailed                   = The user {0} could
 settings.group.error.changeGroupRoleFailed                  = The group role of user {0} could not be edited.
 settings.group.error.groupDoesNotExist                      = The group, of which you wanted to change the settings, does not exist.
 settings.group.error.mandatoryFieldsNotSet                  = At least one of the required attributes of the group, that was to update, was not set: groupId, name, privacyLevel, sharedDocuments
+settings.group.error.nonExistingGroup                       = The group {0} does not exist.
 settings.group.error.userDoesNotExist                       = The invited user does not exist.
 settings.group.header                                       = group settings
 settings.group.homepage                                     = homepage
