--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1875,6 +1875,7 @@ settings.group.error.addUserToGroupFailed                   = Der Benutzer {0} k
 settings.group.error.changeGroupRoleFailed                  = Die Gruppenrolle des Benutzers {0} konnte nicht bearbeitet werden.
 settings.group.error.groupDoesNotExist                      = Die Gruppe, deren Einstellungen Sie ver\u00E4ndern wollten, existiert nicht.
 settings.group.error.mandatoryFieldsNotSet                  = Mindestens eine der Eigenschaften der Gruppe, die Sie updaten wollten, war nicht gesetzt: groupId, name, privacyLevel, sharedDocuments
+settings.group.error.nonExistingGroup                       = Die Gruppe {0} existiert nicht.
 settings.group.error.userDoesNotExist                       = Der eingeladene Benutzer existiert nicht.
 settings.group.header                                       = Gruppeneinstellungen
 settings.group.homepage                                     = Homepage
