new messages for link title

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2225,6 +2225,7 @@ user.gravatarAddress.help             = Select your Gravatar email address point
 user.hobbies                          = hobbies
 user.homepage                         = homepage
 user.homepage.help                    = your personal website
+user.homepage.visit                   = Visit the user's homepage.
 user.institution                      = institution
 user.interests                        = scientific interests
 user.name                             = user name
