--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2231,6 +2231,7 @@ user.gravatarAddress.help             = Geben Sie Ihre Gravatar Email-Adresse zu
 user.hobbies                          = Hobbys
 user.homepage                         = Homepage
 user.homepage.help                    = Ihre pers\u00F6nliche Website
+user.homepage.visit                   = Besuchen Sie die Homepage des Benutzers.
 user.institution                      = Institution
 user.interests                        = Wissenschaftliche Interessen
 user.name                             = Benutzername
